Ta med "kildeId" og send til frontend